--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,106 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Hammersmith+One');
+
+body{
+  font-family: 'Hammersmith One', sans-serif;
+  background: linear-gradient(to right, rgb(32, 19, 18) 0%, rgba(17,15,16,1) 87%, rgba(8,16,18,1) 100%);
+}
+
+h1,
+p{
+  color: white; 
+}
+h1 {
+  font-family: 'Courgette', cursive;
+  text-shadow: 0 1px 0 rgba(0,0,0, .4);
+  line-height: .65;
+  margin-top: .5em;
+  margin-bottom: 0;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+p {
+  margin-top: 20px;
+  font-size: 1.9em;
+  text-shadow: 0 1px 0 rgba(0,0,0, .25);
+}
+header,
+.main{
+  width: 40vw;
+  color: #fff;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.inner-wrap{
+  padding: 30px;
+  background: #F8F8F8;
+  border-radius: 6px;
+  margin-bottom: 15px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.wrapper{
+  margin: 20px 0px 0px 350px;
 }
 
-.App-intro {
-  font-size: large;
+.wrapper label{
+  display: block;
+  color: #888;
+  margin-bottom: 15px;
+}
+.wrapper input[type="text"],
+.wrapper textarea{
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 8px;
+  border-radius: 6px;
+  border: 2px solid #fff;
+  box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.33);
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.wrapper input[type="submit"]{
+    background: #2A88AD;
+    padding: 8px 20px 8px 20px;
+    border-radius: 5px;
+    color: #fff;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.12);
+    box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.17);
+    border: 1px solid #257C9E;
+    font-size: 15px;
+}
+.wrapper input[type="submit"]:hover{
+    background: #2A6881;
+    box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.28);
+}
+
+.data {
+  color: #ffffff;
+  font-weight: 600;
+  border-radius: 7px;
+  padding: 2%;
+  background-color: rgba(7, 94, 100, 0.6);
+  margin-bottom: 20px
+}
+.lista {
+  border-radius: 7px;
+  background-color: rgba(13, 29, 44, 0.6);
+  padding: 1px 15px;
+}
+
+
+.delete {
+  display:inline-block;
+  font-size:15px;
+  background:#fff;
+  box-shadow:0 0 0 0 rgba(0, 0, 0, 0.2), inset 0 -2px 0 0 rgba(0, 0, 0, 0.2), inset 0 40px 25px 10px #ff5e66;
+  color:#fff!important;
+  margin:10px;
+  padding:10px;
+  transition:all .3s ease-out
+}
+.delete:hover {
+  color:#797979!important;
+  box-shadow:0 15px 20px -10px rgba(0, 0, 0, 0), inset 0 -1px 0 0 rgba(0, 0, 0, 0.1), inset 0 0 0 5px #ff5e66
+}
+.delete:active {
+  color:#797979;
+  box-shadow:0 15px 20px -10px rgba(0, 0, 0, 0), inset 0 -1px 0 0 rgba(0, 0, 0, 0.1), inset 0 0 20px 5px #fff;
+  transition:all .1s ease-out
 }
